<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/main_title_st"
        android:textColor="#61380B"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@drawable/shape_title">
    </TextView>
    <Button
        android:id="@+id/main_to_game_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/go_game_st"
        android:textSize="20sp"
        android:textStyle="bold">
    </Button>

    <Button
        android:id="@+id/main_to_score_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/go_score_st"
        android:textSize="20sp"
        android:textStyle="bold">
    </Button>


</LinearLayout>